--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.245.0",
+    "@aws-sdk/client-s3": "^3.252.0",
+    "@aws-sdk/s3-request-presigner": "^3.252.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.4",
